# SentinelHub

./: .env.example  .gitignore  Makefile  README.md  go.mod  go.work
.github/workflows/: ci.yml
agent/: README.md  go.mod
agent/core/: agent.go  config.go
backend/: README.md  build.gradle.kts  pom.xml  settings.gradle.kts
backend/ai/: README.md  build.gradle.kts  pom.xml
backend/asset/: README.md  build.gradle.kts  pom.xml
backend/audit/: README.md  build.gradle.kts  pom.xml
backend/common/: build.gradle.kts  pom.xml
client/: README.md  index.html  package.json  pubspec.yaml  tsconfig.json  vite.config.ts
client/native/: Cargo.toml  README.md
client/native/driver/: README.md
client/native/driver/include/: sentinel_ioctl.h
client/native/driver/linux/: README.md
client/native/driver/linux/bpf/: Makefile  README.md  load.sh  process_block.bpf.c
client/native/driver/linux/sentinel-kmod/: Makefile  sentinel_kmod.c
client/native/driver/sentinel-driver/: Cargo.toml
client/native/driver/sentinel-driver/src/: bpf_sync.rs  fanotify.rs  kernel.rs  main.rs  policy_parse.rs  process_block.rs
client/native/driver/windows/minifilter/: README.md  SentinelFilter.c  SentinelFilter.h
client/native/src/: main.rs
client/native/src/driver/: kernel.rs  mod.rs  windows.rs
client/native/src/enforce/: dlp.rs  mod.rs  nac.rs  software.rs
client/native/src/scan/: compliance.rs
console/: README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: CONTRIBUTING.md  DEVELOPMENT_PLAN.md  MODULES.md
mobile/: README.md
pkg/: go.mod
(+453 files in other folders)
