[package]
name = "sentinel-native"
version = "0.1.0"
edition = "2021"
description = "SentinelHub native sidecar — system collectors and enforcers"

[[bin]]
name = "sentinel-native"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
base64 = "0.22"
