[package]
name = "sentinel-driver"
version = "0.1.0"
edition = "2021"
description = "SentinelHub userspace driver daemon (Unix socket IPC)"

[[bin]]
name = "sentinel-driver"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
